# software-engineering

./: .gitattributes  .gitignore  404.html  README.md  book.toml  build.rb  copy_slides.sh  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
assets/: custom-mdbook.css  custom.css  custom_after_body.html  custom_header.html  exclude_elements.lua  exclude_heading.lua  helpers.css  highlight_line.js
code/: fizzbuzz.py  qr_code.py  test_fizzbuzz.py  test_fizzbuzz_wrapper.py
code/code_quality/: .gitignore  india.c  india_cleaner.c  progress.py  pyproject.toml
code/cumulative_flow/: communication_overhead.py  communication_overhead_eq.py  plot.py  plot_cdf_focus.py  pyproject.toml  reproduce_paul_klipps_figure.py
lectures/: .gitignore  00_intro.html  00_intro.md  01_sdlc.html  01_sdlc.md  02_previously.md  02_scrum.html  02_scrum.md  03_kanban.html  03_kanban.md  04_requirement_analysis.html  04_requirement_analysis.md  05_user_story_mapping.html  05_user_story_mapping.md  06_uml.html  06_uml.md  07_c4.html  07_c4.md  08_patterns.html  08_patterns.md  08_solid.md  09_interfaces.html  09_interfaces.md  09_planning.md  10_planning.html  10_planning.md  11_wireframing.html  11_wireframing.md  12_clean_code.html  12_clean_code.md  13_code_quality.html  13_code_quality.md  14_code_review.html  14_code_review.md  15_testing.html  15_testing.md  16_automatization.html  16_automatization.md  HOME.html  HOME.md  (+29 more)
plot/: plot_firefox_codebase.py  plot_gcc_codebase.py  plot_how_developers_spend_time.py  plotting_config.yaml  pyproject.toml
(+205 files in other folders)
